--- a/SBL.ipynb
+++ b/SBL.ipynb
@@ -5,11 +5,10 @@
    "metadata": {},
    "source": [
     "## Riksarkivet SBL  - Wikidata ett försök att synka dom\n",
-    "version 0.46\n",
+    "version 0.46 this [notebook](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)\n",
     "\n",
     "WD egenskap [Property:P3217](https://www.wikidata.org/wiki/Property:P3217) \n",
-    "* den här [notebooken](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)   \n",
-    "  * SBL personartiklar som saknar [sv:Wikipedia artikel](https://w.wiki/c5f) < 150\n",
+    "* SBL personartiklar som saknar [sv:Wikipedia artikel](https://w.wiki/c5f) < 150\n",
     "* [SBL vs SKBL female articles](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  \n",
     "\n",
     "SBL har idag\n",
@@ -1003,6 +1002,152 @@
     "plt.show()  \n",
     "#plotSBLYearPublished.info \n",
     "#plotSBLYearFemailPublished"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wid</th>\n",
+       "      <th>SBLnr</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>genderLabel</th>\n",
+       "      <th>SBLlength</th>\n",
+       "      <th>titel</th>\n",
+       "      <th>Fodd</th>\n",
+       "      <th>Dod</th>\n",
+       "      <th>Band</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>url</th>\n",
+       "      <th>YearPublished</th>\n",
+       "      <th>WD_Webscrape</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Q2576159</td>\n",
+       "      <td>12455</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q6581072</td>\n",
+       "      <td>kvinna</td>\n",
+       "      <td>27433</td>\n",
+       "      <td>A F Wilhelmina Hallwyl, von</td>\n",
+       "      <td>Född:1844-10-01 – Tyska Sankta Gertruds försam...</td>\n",
+       "      <td>Död:1930-07-25 – Tyska Sankta Gertruds församl...</td>\n",
+       "      <td>Band 18 (1969-1971), sida 68.</td>\n",
+       "      <td>1969-1971</td>\n",
+       "      <td>https://sok.riksarkivet.se/sbl/Presentation.as...</td>\n",
+       "      <td>1971-01-01</td>\n",
+       "      <td>both</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Q3355468</td>\n",
+       "      <td>7869</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q6581072</td>\n",
+       "      <td>kvinna</td>\n",
+       "      <td>52985</td>\n",
+       "      <td>Elise Ottesen-Jensen</td>\n",
+       "      <td>Född:1886-01-02 – Norge (i Højland, Rogaland)</td>\n",
+       "      <td>Död:1973-09-04 – Kungsholm eller Ulrika Eleono...</td>\n",
+       "      <td>Band 28 (1992-1994), sida 450.</td>\n",
+       "      <td>1992-1994</td>\n",
+       "      <td>https://sok.riksarkivet.se/sbl/Presentation.as...</td>\n",
+       "      <td>1994-01-01</td>\n",
+       "      <td>both</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Q4975387</td>\n",
+       "      <td>6846</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q6581072</td>\n",
+       "      <td>kvinna</td>\n",
+       "      <td>84865</td>\n",
+       "      <td>Mathilda L Roos</td>\n",
+       "      <td>Född:1852-08-02 – Stockholms domkyrkoförsamlin...</td>\n",
+       "      <td>Död:1908-07-17 – Danderyds församling, Stockho...</td>\n",
+       "      <td>Band 30 (1998-2000), sida 339.</td>\n",
+       "      <td>1998-2000</td>\n",
+       "      <td>https://sok.riksarkivet.se/sbl/Presentation.as...</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>both</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>Q444475</td>\n",
+       "      <td>11967</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q6581072</td>\n",
+       "      <td>kvinna</td>\n",
+       "      <td>21697</td>\n",
+       "      <td>Ingrid Elofsdotter</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Död:1282-09-02 – Skänninge stad, Östergötlands...</td>\n",
+       "      <td>Band 20 (1973-1975), sida 25.</td>\n",
+       "      <td>1973-1975</td>\n",
+       "      <td>https://sok.riksarkivet.se/sbl/Presentation.as...</td>\n",
+       "      <td>1975-01-01</td>\n",
+       "      <td>both</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>Q2482366</td>\n",
+       "      <td>11769</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q6581072</td>\n",
+       "      <td>kvinna</td>\n",
+       "      <td>17658</td>\n",
+       "      <td>Kristina</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Död:levde 1158</td>\n",
+       "      <td>Band 21 (1975-1977), sida 570.</td>\n",
+       "      <td>1975-1977</td>\n",
+       "      <td>https://sok.riksarkivet.se/sbl/Presentation.as...</td>\n",
+       "      <td>1977-01-01</td>\n",
+       "      <td>both</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          wid  SBLnr  ... YearPublished WD_Webscrape\n",
+       "15   Q2576159  12455  ...    1971-01-01         both\n",
+       "17   Q3355468   7869  ...    1994-01-01         both\n",
+       "21   Q4975387   6846  ...    2000-01-01         both\n",
+       "106   Q444475  11967  ...    1975-01-01         both\n",
+       "116  Q2482366  11769  ...    1977-01-01         both\n",
+       "\n",
+       "[5 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 356,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfWD_SBL_female_article.head()"
    ]
   },
   {
