--- a/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
@@ -23,6 +23,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Last run:  2020-09-29 13:51:05.533821\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "start_time  = datetime.now()\n",
+    "print(\"Last run: \", start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "128  antal poster\n"
      ]
     }
@@ -81,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,28 +141,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Anita Nathorst</td>\n",
-       "      <td>anita-nathorst</td>\n",
+       "      <td>Alfred Dahlgren</td>\n",
+       "      <td>alfred-dahlgren</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Henri Osti</td>\n",
-       "      <td>henri-osti</td>\n",
+       "      <td>Rosalie Olivecrona</td>\n",
+       "      <td>rosalie-olivecrona</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Fadime Sahindal</td>\n",
-       "      <td>fadime-sahindal</td>\n",
+       "      <td>Hans Rosling</td>\n",
+       "      <td>hans-rosling</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Edvard Raab</td>\n",
-       "      <td>edvard-raab</td>\n",
+       "      <td>Emma Schenson</td>\n",
+       "      <td>emma-schenson</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Karl Gustaf Lennander</td>\n",
-       "      <td>karl-gustaf-lennander</td>\n",
+       "      <td>Sonja Lyttkens</td>\n",
+       "      <td>sonja-lyttkens</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -181,23 +200,23 @@
        "</div>"
       ],
       "text/plain": [
-       "            kulturgravname                   href\n",
-       "0           Anita Nathorst         anita-nathorst\n",
-       "1               Henri Osti             henri-osti\n",
-       "2          Fadime Sahindal        fadime-sahindal\n",
-       "3              Edvard Raab            edvard-raab\n",
-       "4    Karl Gustaf Lennander  karl-gustaf-lennander\n",
-       "..                     ...                    ...\n",
-       "123          Uno von Troil          uno-von-troil\n",
-       "124         Viktor Persson         viktor-persson\n",
-       "125          Vivi Täckholm          vivi-tackholm\n",
-       "126        Yngve Svalander        yngve-svalander\n",
-       "127               Åke Holm               ake-holm\n",
+       "         kulturgravname                href\n",
+       "0       Alfred Dahlgren     alfred-dahlgren\n",
+       "1    Rosalie Olivecrona  rosalie-olivecrona\n",
+       "2          Hans Rosling        hans-rosling\n",
+       "3         Emma Schenson       emma-schenson\n",
+       "4        Sonja Lyttkens      sonja-lyttkens\n",
+       "..                  ...                 ...\n",
+       "123       Uno von Troil       uno-von-troil\n",
+       "124      Viktor Persson      viktor-persson\n",
+       "125       Vivi Täckholm       vivi-tackholm\n",
+       "126     Yngve Svalander     yngve-svalander\n",
+       "127            Åke Holm            ake-holm\n",
        "\n",
        "[128 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +433,7 @@
        "[121 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,18 +470,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "both                 128\n",
-       "Kulturgravar_only      1\n",
+       "both    130\n",
        "Name: Kulturgravar_Wikidata, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -507,28 +525,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>henri-osti</td>\n",
-       "      <td>Henri Osti</td>\n",
-       "      <td>Kulturgravar_only</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    person  qid personLabel  ...        href kulturgravname Kulturgravar_Wikidata\n",
-       "128    NaN  NaN         NaN  ...  henri-osti     Henri Osti     Kulturgravar_only\n",
-       "\n",
-       "[1 rows x 7 columns]"
+       "Empty DataFrame\n",
+       "Columns: [person, qid, personLabel, refURL, href, kulturgravname, Kulturgravar_Wikidata]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,17 +547,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "128    NaN\n",
-       "Name: refURL, dtype: object"
+       "Series([], Name: refURL, dtype: object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +584,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1 entries, 128 to 128\n",
+      "Int64Index: 0 entries\n",
       "Data columns (total 7 columns):\n",
       " #   Column                 Non-Null Count  Dtype \n",
       "---  ------                 --------------  ----- \n",
@@ -586,11 +592,11 @@
       " 1   qid                    0 non-null      object\n",
       " 2   personLabel            0 non-null      object\n",
       " 3   refURL                 0 non-null      object\n",
-      " 4   href                   1 non-null      object\n",
-      " 5   kulturgravname         1 non-null      object\n",
-      " 6   Kulturgravar_Wikidata  1 non-null      object\n",
+      " 4   href                   0 non-null      object\n",
+      " 5   kulturgravname         0 non-null      object\n",
+      " 6   Kulturgravar_Wikidata  0 non-null      object\n",
       "dtypes: object(7)\n",
-      "memory usage: 64.0+ bytes\n"
+      "memory usage: 0.0+ bytes\n"
      ]
     }
    ],
@@ -600,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -629,21 +635,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Henri Osti</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/henri-osti</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  kulturgravname                                                      url\n",
-       "0     Henri Osti  https://kulturpersoner.uppsalakyrkogardar.se/henri-osti"
+       "Empty DataFrame\n",
+       "Columns: [kulturgravname, url]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,10 +661,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ended:  2020-09-29 13:51:07.428835\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:01.895286\n"
+     ]
+    }
+   ],
+   "source": [
+    "end = datetime.now()\n",
+    "print(\"Ended: \", end)\n",
+    "print('Time elapsed (hh:mm:ss.ms) {}'.format(datetime.now() - start_time))"
+   ]
   }
  ],
  "metadata": {
