--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Litteraturbanken Author \n",
+    "# Litteraturbanken Author \n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)\n",
     "* [T238932 API Litteraturbanken]([https://phabricator.wikimedia.org/T238932)\n",
     "  * good documention feels is missing\n",
@@ -13,15 +13,16 @@
     "  * [url_list](https://litteraturbanken.se/api/url_list)\n",
     "  * [API List all 0-10 include](https://litteraturbanken.se/api/list_all/etext,faksimil,pdf?from=0&to=10&include=authors,forfattare,lbworkid,titlepath,title,librisid,mediatype,main_author.author_id)\n",
     "    * [List all 0-10](https://litteraturbanken.se/api/list_all/etext,faksimil,pdf?from=0&to=10)\n",
-    "### Issues\n",
-    "#### Filter out authors with no books \n",
+    "    \n",
+    "## Issues\n",
+    "### 1) Filter out authors with no books \n",
     "* BergenstråhleJ miss books \n",
     "* BjorklundJA miss books\n",
     "\n",
     "**solution** Filter on field Show\n",
     "\n",
     "LitteraturbankenTotShow = LitteraturbankenTot[LitteraturbankenTot[\"show\"]==True]  \n",
-    "#### copyright on metadata?\n",
+    "### 2) copyright on metadata?\n",
     "We need CC0 to import data in Wikidata (see [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)) e.g. if we should add all books as objecys with no text nut limnks Litteraturbanken then fields like nelow need to be [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/)  \n",
     "* Författare\n",
     "* Verk\n",
