--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# European data portal - Metadata quality\n",
-    "version 1.11\n",
+    "version 1.12\n",
     "\n",
     "**Update** we got today a new Wikidata [property P8402](https://www.wikidata.org/wiki/Property_talk:P8402) for Open Data Portal --> we can start connect objects with its data portal see [map](https://w.wiki/WQg) what is connected today see [tweet](https://twitter.com/salgo60/status/1280024337240723461?s=20)\n",
     "\n",
     "\n",
-    "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/European%20data%20portal%20-%20quality%20of%20Metadata.ipynb)\n",
+    "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/European%20data%20portal%20-%20quality%20of%20Metadata.ipynb) https://tinyurl.com/EDPQua\n",
     "* [SPARQL manager](https://www.europeandataportal.eu/sparql-manager/sv/)  \n",
     "* [DCAT Spec](https://www.w3.org/TR/vocab-dcat-2/) Data Catalog Vocabulary (DCAT) - Version 2\n",
     "* in Swedish [input to the DCAT-AP-SE](https://github.com/DIGGSweden/DCAT-AP-SE/issues/72#issuecomment-653731898) that we need better version management and use DOI for datasets. Now with copy datasets everywhere we get a chaos to understand what dataset we use, what version of it and if we can trust it and use it as a source for our data. Compare [ORCID usage video](https://www.youtube.com/watch?v=a1Rijk_TMHA) \n",
@@ -122,6 +122,13 @@
     "“Fostering FAIR Data Practices In Europe” \n",
     "see [fairaware toolkit](https://fairaware.dans.knaw.nl/) \" It helps to assess your current level of awareness on making your datasets findable, accessible, interoperable and reusable (FAIR) before uploading them in a data repository\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
