--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Nobel API - check Wikidata and Nobel API\n",
-    "version. 0.2 changed api call and added **Vrandečić tracker**\n",
+    "version. 0.2 changed api call and added **Vrandečić EWS**\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)  \n",
     "\n",
     "  * WIkidata property [Property:P8024](https://www.wikidata.org/wiki/Property:P8024)\n",
