--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-07 00:12:41.845551\n"
+      "Last run:  2020-10-07 12:50:31.055889\n"
      ]
     }
    ],
@@ -59,19 +59,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 949 entries, 0 to 948\n",
+      "RangeIndex: 951 entries, 0 to 950\n",
       "Data columns (total 18 columns):\n",
       " #   Column           Non-Null Count  Dtype \n",
       "---  ------           --------------  ----- \n",
-      " 0   id               949 non-null    object\n",
-      " 1   knownName        925 non-null    object\n",
-      " 2   givenName        925 non-null    object\n",
-      " 3   familyName       923 non-null    object\n",
-      " 4   fullName         925 non-null    object\n",
-      " 5   gender           925 non-null    object\n",
-      " 6   birth            924 non-null    object\n",
-      " 7   links            949 non-null    object\n",
-      " 8   nobelPrizes      949 non-null    object\n",
+      " 0   id               951 non-null    object\n",
+      " 1   knownName        927 non-null    object\n",
+      " 2   givenName        927 non-null    object\n",
+      " 3   familyName       925 non-null    object\n",
+      " 4   fullName         927 non-null    object\n",
+      " 5   gender           927 non-null    object\n",
+      " 6   birth            926 non-null    object\n",
+      " 7   links            951 non-null    object\n",
+      " 8   nobelPrizes      951 non-null    object\n",
       " 9   death            628 non-null    object\n",
       " 10  orgName          24 non-null     object\n",
       " 11  nativeName       24 non-null     object\n",
@@ -82,7 +82,7 @@
       " 16  birthCountryNow  1 non-null      object\n",
       " 17  birthContinent   1 non-null      object\n",
       "dtypes: object(18)\n",
-      "memory usage: 133.6+ KB\n"
+      "memory usage: 133.9+ KB\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>939</th>\n",
+       "      <th>941</th>\n",
        "      <td>50</td>\n",
        "      <td>{'en': 'Wolfgang Pauli', 'se': 'Wolfgang Pauli'}</td>\n",
        "      <td>{'en': 'Wolfgang', 'se': 'Wolfgang'}</td>\n",
@@ -159,7 +159,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>940</th>\n",
+       "      <th>942</th>\n",
        "      <td>483</td>\n",
        "      <td>{'en': 'Woodrow Wilson', 'se': 'Woodrow Wilson'}</td>\n",
        "      <td>{'en': 'Woodrow', 'se': 'Woodrow'}</td>\n",
@@ -180,7 +180,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>941</th>\n",
+       "      <th>943</th>\n",
        "      <td>557</td>\n",
        "      <td>{'en': 'Yasser Arafat', 'se': 'Yasser Arafat'}</td>\n",
        "      <td>{'en': 'Yasser', 'se': 'Yasser'}</td>\n",
@@ -201,7 +201,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>942</th>\n",
+       "      <th>944</th>\n",
        "      <td>642</td>\n",
        "      <td>{'en': 'Yasunari Kawabata', 'se': 'Yasunari Ka...</td>\n",
        "      <td>{'en': 'Yasunari', 'se': 'Yasunari'}</td>\n",
@@ -222,7 +222,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>943</th>\n",
+       "      <th>945</th>\n",
        "      <td>559</td>\n",
        "      <td>{'en': 'Yitzhak Rabin', 'se': 'Yitzhak Rabin'}</td>\n",
        "      <td>{'en': 'Yitzhak', 'se': 'Yitzhak'}</td>\n",
@@ -243,7 +243,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>944</th>\n",
+       "      <th>946</th>\n",
        "      <td>826</td>\n",
        "      <td>{'en': 'Yoichiro Nambu', 'se': 'Yoichiro Nambu'}</td>\n",
        "      <td>{'en': 'Yoichiro', 'se': 'Yoichiro'}</td>\n",
@@ -264,7 +264,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>945</th>\n",
+       "      <th>947</th>\n",
        "      <td>927</td>\n",
        "      <td>{'en': 'Yoshinori Ohsumi', 'se': 'Yoshinori Oh...</td>\n",
        "      <td>{'en': 'Yoshinori', 'se': 'Yoshinori'}</td>\n",
@@ -285,7 +285,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>946</th>\n",
+       "      <th>948</th>\n",
        "      <td>265</td>\n",
        "      <td>{'en': 'Yuan T. Lee', 'se': 'Yuan T. Lee'}</td>\n",
        "      <td>{'en': 'Yuan T.', 'se': 'Yuan T.'}</td>\n",
@@ -306,7 +306,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>947</th>\n",
+       "      <th>949</th>\n",
        "      <td>794</td>\n",
        "      <td>{'en': 'Yves Chauvin', 'se': 'Yves Chauvin'}</td>\n",
        "      <td>{'en': 'Yves', 'se': 'Yves'}</td>\n",
@@ -327,7 +327,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>948</th>\n",
+       "      <th>950</th>\n",
        "      <td>726</td>\n",
        "      <td>{'en': 'Zhores Alferov', 'se': 'Zhores Alferov'}</td>\n",
        "      <td>{'en': 'Zhores', 'se': 'Zhores'}</td>\n",
@@ -353,16 +353,16 @@
       ],
       "text/plain": [
        "      id  ... birthContinent\n",
-       "939   50  ...            NaN\n",
-       "940  483  ...            NaN\n",
-       "941  557  ...            NaN\n",
-       "942  642  ...            NaN\n",
-       "943  559  ...            NaN\n",
-       "944  826  ...            NaN\n",
-       "945  927  ...            NaN\n",
-       "946  265  ...            NaN\n",
-       "947  794  ...            NaN\n",
-       "948  726  ...            NaN\n",
+       "941   50  ...            NaN\n",
+       "942  483  ...            NaN\n",
+       "943  557  ...            NaN\n",
+       "944  642  ...            NaN\n",
+       "945  559  ...            NaN\n",
+       "946  826  ...            NaN\n",
+       "947  927  ...            NaN\n",
+       "948  265  ...            NaN\n",
+       "949  794  ...            NaN\n",
+       "950  726  ...            NaN\n",
        "\n",
        "[10 rows x 18 columns]"
       ]
@@ -386,17 +386,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 949 entries, 0 to 948\n",
+      "RangeIndex: 951 entries, 0 to 950\n",
       "Data columns (total 5 columns):\n",
       " #   Column   Non-Null Count  Dtype \n",
       "---  ------   --------------  ----- \n",
-      " 0   id       949 non-null    object\n",
-      " 1   name_en  925 non-null    object\n",
-      " 2   name_se  925 non-null    object\n",
-      " 3   link     949 non-null    object\n",
-      " 4   gender   925 non-null    object\n",
+      " 0   id       951 non-null    object\n",
+      " 1   name_en  927 non-null    object\n",
+      " 2   name_se  927 non-null    object\n",
+      " 3   link     951 non-null    object\n",
+      " 4   gender   927 non-null    object\n",
       "dtypes: object(5)\n",
-      "memory usage: 37.2+ KB\n"
+      "memory usage: 37.3+ KB\n"
      ]
     }
    ],
@@ -568,15 +568,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 947 entries, 0 to 946\n",
+      "RangeIndex: 949 entries, 0 to 948\n",
       "Data columns (total 3 columns):\n",
       " #   Column     Non-Null Count  Dtype \n",
       "---  ------     --------------  ----- \n",
-      " 0   item       947 non-null    object\n",
-      " 1   itemLabel  947 non-null    object\n",
-      " 2   NobelAPI   947 non-null    object\n",
+      " 0   item       949 non-null    object\n",
+      " 1   itemLabel  949 non-null    object\n",
+      " 2   NobelAPI   949 non-null    object\n",
       "dtypes: object(3)\n",
-      "memory usage: 22.3+ KB\n"
+      "memory usage: 22.4+ KB\n"
      ]
     }
    ],
@@ -789,7 +789,7 @@
     {
      "data": {
       "text/plain": [
-       "both          947\n",
+       "both          949\n",
        "Nobel_only      2\n",
        "Name: WD_Nobel, dtype: int64"
       ]
@@ -825,34 +825,37 @@
        "      <th>gender</th>\n",
        "      <th>WD_Nobel</th>\n",
        "      <th>Nobel</th>\n",
+       "      <th>Nobelhtml</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>947</th>\n",
+       "      <th>949</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>523</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/523</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Nobel_only</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=523'>link</a></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>948</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>775</td>\n",
-       "      <td>Linda B. Buck</td>\n",
-       "      <td>Linda B. Buck</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/775</td>\n",
+       "      <td>991</td>\n",
+       "      <td>Emmanuelle Charpentier</td>\n",
+       "      <td>Emmanuelle Charpentier</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate/991</td>\n",
        "      <td>female</td>\n",
        "      <td>Nobel_only</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=775'>link</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>link</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>950</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>992</td>\n",
+       "      <td>Jennifer A. Doudna</td>\n",
+       "      <td>Jennifer A. Doudna</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate/992</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Nobel_only</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>link</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -871,6 +874,7 @@
     "\n",
     "from IPython.display import HTML\n",
     "Nobelonly[\"Nobel\"] = \"<a href='https://api.nobelprize.org/v1/laureate.json?id=\" + Nobelonly[\"id\"] + \"'>link</a>\"\n",
+    "Nobelonly[\"Nobelhtml\"] = \"<a href='https://www.nobelprize.org/laureate/\" + Nobelonly[\"id\"] + \"'>html</a>\"\n",
     "pd.set_option(\"display.max.columns\", None) \n",
     "HTML(Nobelonly.to_html(escape=False))"
    ]
@@ -884,7 +888,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End run:  2020-10-06 23:58:54.492448\n"
+      "End run:  2020-10-07 12:51:24.123840\n"
      ]
     }
    ],
@@ -894,14 +898,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed (hh:mm:ss.ms) 0:00:05.531442\n"
+      "Time elapsed (hh:mm:ss.ms) 0:00:53.075015\n"
      ]
     }
    ],
